<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="50"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ateam"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/points"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/pointsA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="60sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faults"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/faulA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="40sp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:onClick="add5Points"
                android:tag="A"
                android:text="@string/add5"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:onClick="add10Points"
                android:tag="A"
                android:text="@string/add10"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:onClick="addFault"
                android:tag="A"
                android:text="@string/add_faul"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="50"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/bteam"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/points"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/pointsB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="60sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faults"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/faulB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="40sp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:onClick="add5Points"
                android:tag="B"
                android:text="@string/add5"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:onClick="add10Points"
                android:tag="B"
                android:text="@string/add10"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="125dp"
                android:onClick="addFault"
                android:tag="B"
                android:text="@string/add_faul"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:width="125dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:background="@color/colorAccent"/>

</RelativeLayout>